--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.1.3",
     "ngx-bootstrap": "^7.1.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.1.3",
