--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "bootswatch": "^5.1.3",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-currency": "^2.5.3",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
